Fix dialog overflow (#3038)
* set the overflow property of the Modal content to auto

* add changeset

--- a/packages/circuit-ui/components/Modal/Modal.module.css
+++ b/packages/circuit-ui/components/Modal/Modal.module.css
@@ -7,7 +7,7 @@
 .content {
   position: relative;
   max-height: 90vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 @media (min-width: 480px) {
